Fix rounding line characters so they line up regardless of font

Unicode has 4 rounded corner characters for prettier box drawing:
U+256D, U+256E, U+256F, U+2570
Konsole doesn't always render these such that they line up with the
more "normal" box drawing characters.

THanks to Parker Coates coates kde org for report and patch
BUG: 344275